# betaflight

./: CMakeLists.txt
src/main/cli/: settings.c
src/main/config/: config.c  config.h
src/main/fc/: init.c
src/main/io/: beeper.c  beeper.h  piniobox.c  piniobox.h
src/main/msp/: msp.c
src/main/osd/: osd.c  osd.h  osd_elements.c  osd_warnings.c
src/main/pg/: pg_ids.h  piniobox.c  piniobox.h
